/*
 * Copyright (c) 2021, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * WSO2 Inc. licenses this file to you under the Apache License,
 * Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

package envoy.extensions.filters.http.mgw_wasm_websocket.v3;

option java_package = "org.wso2.micro.gateway.enforcer.websocket";
option java_outer_classname = "MgwWebSocketProto";
option java_multiple_files = true;

service WebSocketFrameService {
  rpc PublishFrameData(stream WebSocketFrameRequest) returns (stream WebSocketFrameResponse) {}
}

message WebSocketFrameRequest {
  string node_id = 1;
  Metadata filter_metadata = 2;
  int32 frame_length = 3;

  string remote_ip = 4;
}

message WebSocketFrameResponse {
  string message = 1;
}

message MetadataValue {
  string key = 1;
  string value = 2;
}

message Metadata {
  repeated MetadataValue metadata = 1;
}

